--- a/css/style.scss
+++ b/css/style.scss
@@ -1,13 +1,13 @@
 @import 'vars';
 
+html {
+    font-size: 20px;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
-    /*   ::-webkit-scrollbar {
-        width: 0
-    }*/
 }
 
 a {
@@ -16,7 +16,6 @@ a {
 
 img {
     max-width: 100%;
-    // border: none;
 }
 
 body {
@@ -32,49 +31,49 @@ body {
 .title {
     color: $colorText;
     font-family: $fontFamilySite;
-    font-size: 48px;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    padding-bottom: 74px;
-}
-
-.text {
-    color: $colorText;
+    padding-bottom: 70px;
 }
 
 /*Header*/
 .header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    min-height: 140px;
+    min-height: 100px;
 
     &__application {
         color: $colorAccentSite;
         text-align: center;
         font-family: $fontFamilySite;
-        font-size: 36px;
+        font-size: 1.6rem;
         font-style: normal;
         font-weight: 700;
         line-height: 137.988%;
         text-transform: uppercase;
     }
-}
 
-.navbar {
-    display: flex;
-    gap: 168px;
+    &__navbar {
+        display: flex;
+        gap: 170px;
+    }
 
     &__link {
         color: $colorText;
         text-align: center;
         font-family: $fontFamilySite;
-        font-size: 24px;
+        font-size: 1rem;
         font-style: normal;
         font-weight: 700;
         line-height: 137.988%;
         text-transform: uppercase;
+
+        &:hover {
+            color: $colorAccentSite;
+        }
     }
 }
 
@@ -82,27 +81,26 @@ body {
 .application {
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 100px;
-    padding-bottom: 74px;
-}
+    gap: 67px;
+    padding-bottom: 70px;
 
-.application-left {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-left: 135px;
+    &__left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-left: 16%;
+    }
 
     &__title {
         color: $colorText;
         text-align: center;
         font-family: $fontFamilySite;
-        font-size: 48px;
+        font-size: 2rem;
         font-style: normal;
         font-weight: 700;
         line-height: 137.988%;
         text-transform: uppercase;
-        padding-bottom: 50px;
+        padding-bottom: 31px;
     }
 
     &__btn {
@@ -111,13 +109,13 @@ body {
         color: $colorSelectSite;
         font-family: $fontFamilySite;
         text-align: center;
-        font-size: 48px;
+        font-size: 1.6rem;
         font-style: normal;
         font-weight: 700;
         line-height: 137.988%;
         text-transform: uppercase;
 
-        padding: 23px 115px;
+        padding: 22px 65px;
         border: 2px solid transparent;
 
         &:hover {
@@ -127,28 +125,38 @@ body {
             transition: all 0, 3s;
         }
     }
+
+    &__baner {
+        min-width: 40vw;
+    }
 }
 
+
+/*About*/
 .about {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 74px;
+    padding-bottom: 70px;
 
     &__box {
         display: flex;
         flex-direction: row;
-        align-items: center;
-        gap: 100px;
+        gap: 98px;
+    }
+
+    &__baner {
+        min-width: 40vw;
     }
 
     &__box-right {
-        padding-right: 160px;
+        padding-right: 13%;
     }
 
     &__desc {
+        color: $colorText;
         font-family: $fontFamilySite;
-        font-size: 35px;
+        font-size: 1.5rem;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
@@ -161,7 +169,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 74px;
+    padding-bottom: 70px;
 
     &__box {
         display: flex;
@@ -175,21 +183,19 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 74px;
+    padding-bottom: 70px;
 
     &__flex {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 50px;
-        padding-bottom: 40px;
+        gap: 60px;
+        padding-bottom: 23px;
     }
 
     &__box {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 15px;
+        gap: 20px;
     }
 
     &__img {
@@ -197,18 +203,20 @@ body {
     }
 
     &__name {
+        color: $colorText;
         text-align: center;
         font-family: $fontFamilySite;
-        font-size: 35px;
+        font-size: 1.7rem;
         font-style: normal;
         font-weight: 700;
         line-height: 137.988%;
     }
 
     &__text {
+        color: $colorText;
         text-align: center;
         font-family: $fontFamilySite;
-        font-size: 32px;
+        font-size: 1.5rem;
         font-style: normal;
         font-weight: 400;
         line-height: 137.988%;
@@ -223,98 +231,85 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 74px;
+    padding-bottom: 70px;
 
     &__flex {
         display: flex;
-        flex-direction: row;
         align-items: center;
-        gap: 54px;
+        gap: 50px;
     }
 
     &__box {
         background-color: $colorBox;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        padding: 35px 54px;
+        padding: 44px;
     }
 
     &__box-info {
         display: flex;
-        flex-direction: row;
-        justify-content: center;
         align-items: center;
-        gap: 30px;
+        justify-content: space-between;
     }
 
     &__photo {
-        height: 566px;
+        padding-bottom: 44px;
     }
 
     &__info {
+        color: $colorText;
         font-family: $fontFamilySite;
-        font-size: 24px;
+        font-size: 1rem;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
         letter-spacing: 1.2px;
+
+        &_price {
+            color: $colorAccentSite;
+        }
     }
 
-    &__price {
-        color: $colorAccentSite;
-        font-family: $fontFamilySite;
-        font-size: 24px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        letter-spacing: 1.2px;
-    }
 }
 
 /*Footer*/
 .footer {
     background-color: $colorFooter;
     display: flex;
-    // justify-content: space-around;
+    justify-content: space-around;
 
-    min-height: 300px;
-    padding-top: 54px;
+    min-height: 250px;
+    padding-top: 29px;
 
     &__text {
+        color: $colorText;
         font-family: $fontFamilySite;
-        font-size: 24px;
+        font-size: 1rem;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
     }
-}
 
-.contact {
-    padding-right: 45%;
-    padding-left: 8%;
-
-    &__tel {
+    &__contact-tel {
         display: flex;
         align-items: center;
-        gap: 30px;
+        gap: 15px;
         padding-bottom: 45px;
     }
 
-    &__schedule {
+    &__contact-schedule {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        padding-left: 70px;
+        padding-left: 57px;
     }
-}
 
-.socials {
-    display: flex;
-    gap: 15px;
-    flex-direction: column;
+    &__socials {
+        display: flex;
+        gap: 15px;
+        flex-direction: column;
+    }
 
-    &__nav {
+    &__socials-nav {
         display: flex;
         align-items: center;
         justify-content: center;
