--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,47 @@
+.catalog {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 30px;
+}
+.catalog__box {
+  background-color: #17171D;
+  display: flex;
+  gap: 50px;
+  padding: 50px;
+  margin-bottom: 30px;
+  min-width: 100%;
+}
+.catalog__desc {
+  display: flex;
+  flex-direction: column;
+}
+.catalog__box-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
+}
+.catalog__photo {
+  padding-bottom: 35px;
+}
+.catalog__features {
+  max-width: 50vw;
+  padding-top: 39px;
+}
+.catalog__info {
+  color: #D9D9D9;
+  font-family: "Roboto";
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 1.2px;
+  padding-bottom: 15px;
+}
+.catalog__info_price {
+  color: #DFB600;
+}
 html {
   font-size: 20px;
 }
@@ -160,7 +204,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 60px;
 }
 .team__flex {
   display: flex;
@@ -257,7 +300,7 @@ body {
   background-color: #0F0F13;
   display: flex;
   justify-content: space-around;
-  min-height: 250px;
+  min-height: 230px;
   padding-top: 29px;
 }
 .footer__text {
