--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
 @import 'vars';
+@import 'services';
 
 html {
     font-size: 20px;
@@ -162,7 +163,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    // padding-bottom: 60px;
 
     &__box {
         display: flex;
@@ -176,7 +176,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 60px;
 
     &__flex {
         display: flex;
@@ -291,7 +290,7 @@ body {
     display: flex;
     justify-content: space-around;
 
-    min-height: 250px;
+    min-height: 230px;
     padding-top: 29px;
 
     &__text {
