--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@
 .catalog__info_price {
   color: #DFB600;
 }
+
 html {
   font-size: 20px;
 }
@@ -252,16 +253,16 @@ body {
   align-items: flex-end;
 }
 .services__flex-box {
-  display: flex;
-  align-items: center;
-  gap: 50px;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(3, 350px);
+  gap: 20px;
   padding-bottom: 40px;
 }
 .services__box {
   background-color: #17171D;
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding: 35px;
 }
 .services__box-info {
@@ -276,7 +277,7 @@ body {
 .services__info {
   color: #D9D9D9;
   font-family: "Roboto";
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
