--- a/css/style.css
+++ b/css/style.css
@@ -94,16 +94,6 @@ body {
   align-items: center;
   min-height: 100px;
 }
-.header__application {
-  color: #DFB600;
-  text-align: center;
-  font-family: "Roboto";
-  font-size: 1.6rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 137.988%;
-  text-transform: uppercase;
-}
 .header__navbar {
   display: flex;
   gap: 170px;
@@ -120,6 +110,16 @@ body {
 }
 .header__link:hover {
   color: #DFB600;
+}
+.header__btn {
+  color: #DFB600;
+  text-align: center;
+  font-family: "Roboto";
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 137.988%;
+  text-transform: uppercase;
 }
 
 /*Application*/
