--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 .catalog__desc {
   display: flex;
   flex-direction: column;
+  min-width: 350px;
 }
 .catalog__box-info {
   display: flex;
@@ -25,11 +26,7 @@
 .catalog__photo {
   padding-bottom: 35px;
 }
-.catalog__features {
-  max-width: 50vw;
-  padding-top: 39px;
-}
-.catalog__info {
+.catalog__text {
   color: #D9D9D9;
   font-family: "Roboto";
   font-size: 1rem;
@@ -38,6 +35,16 @@
   line-height: normal;
   letter-spacing: 1.2px;
   padding-bottom: 15px;
+}
+.catalog__info {
+  color: #D9D9D9;
+  font-family: "Roboto";
+  font-size: 0.8rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 1.2px;
+  text-transform: uppercase;
 }
 .catalog__info_price {
   color: #DFB600;
@@ -282,6 +289,7 @@ body {
   font-weight: 400;
   line-height: normal;
   letter-spacing: 1.2px;
+  text-transform: uppercase;
 }
 .services__info_price {
   color: #DFB600;
