--- a/css/style.scss
+++ b/css/style.scss
@@ -71,7 +71,7 @@ body {
             color: $colorAccentSite;
         }
     }
-    
+
     &__btn {
         color: $colorAccentSite;
         text-align: center;
@@ -265,6 +265,7 @@ body {
         font-weight: 400;
         line-height: normal;
         letter-spacing: 1.2px;
+        text-transform: uppercase;
 
         &_price {
             color: $colorAccentSite;
