--- a/css/style.scss
+++ b/css/style.scss
@@ -167,7 +167,13 @@ body {
     &__box {
         display: flex;
         flex-direction: row;
-        gap: 30px;
+        gap: 50px;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    &__photo {
+        width: 30%;
     }
 }
 
