--- a/css/_services.scss
+++ b/css/_services.scss
@@ -11,6 +11,10 @@
         padding: 50px;
         margin-bottom: 30px;
         min-width: 100%;
+
+        &_position-reverse {
+            flex-direction: row-reverse;
+        }
     }
 
     &__desc {
