--- a/css/_call_reques.scss
+++ b/css/_call_reques.scss
@@ -2,21 +2,32 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 55px;
+    padding: 60px 0px;
 
     &__box {
         background-color: $colorBox;
-        min-width: 50%;
-        min-height: 50%;
-        padding: 3%;
+        padding: 4% 8%;
         display: flex;
         justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__title {
+        padding: 0px 0px 52px 0px;
+        color: #D9D9D9;
+        font-family: "Roboto";
+        font-size: 2rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
     }
 }
 
 .questionnaire {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
 
     &__info {
@@ -28,6 +39,32 @@
     }
 
     &__input {
-        min-width: 500px
+        min-width: 500px;
+        height: 70px;
+        border-radius: 10px;
+    }
+
+    &__submit {
+        width: 320px;
+        height: 60px;
+        border-radius: 10px;
+        background-color: $colorAccentSite;
+        padding: 8px 0px;
+
+        color: $colorSelectSite;
+        font-family: $fontFamilySite;
+        font-size: 1.6rem;
+        font-weight: 700;
+        line-height: 137.99%;
+        text-transform: uppercase;
+
+        border: 2px solid transparent;
+
+        &:hover {
+            border: 2px solid $colorAccentSite;
+            color: $colorAccentSite;
+            background-color: $colorSelectSite;
+            transition: all 0, 3s;
+        }
     }
 }
