--- a/css/style.css
+++ b/css/style.css
@@ -57,20 +57,30 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 55px;
+  padding: 60px 0px;
 }
 .call-request__box {
   background-color: #17171D;
-  min-width: 50%;
-  min-height: 50%;
-  padding: 3%;
+  padding: 4% 8%;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.call-request__title {
+  padding: 0px 0px 52px 0px;
+  color: #D9D9D9;
+  font-family: "Roboto";
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .questionnaire {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 20px;
 }
 .questionnaire__info {
@@ -82,6 +92,28 @@
 }
 .questionnaire__input {
   min-width: 500px;
+  height: 70px;
+  border-radius: 10px;
+}
+.questionnaire__submit {
+  width: 320px;
+  height: 60px;
+  border-radius: 10px;
+  background-color: #DFB600;
+  padding: 8px 0px;
+  color: #121217;
+  font-family: "Roboto";
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 137.99%;
+  text-transform: uppercase;
+  border: 2px solid transparent;
+}
+.questionnaire__submit:hover {
+  border: 2px solid #DFB600;
+  color: #DFB600;
+  background-color: #121217;
+  transition: all 0, 3s;
 }
 
 html {
