--- a/css/_call_reques.scss
+++ b/css/_call_reques.scss
@@ -14,7 +14,7 @@
     }
 
     &__title {
-        padding: 0px 0px 52px 0px;
+        padding: 0px 0px 15px 0px;
         color: #D9D9D9;
         font-family: "Roboto";
         font-size: 2rem;
@@ -39,21 +39,22 @@
     }
 
     &__input {
-        min-width: 500px;
-        height: 70px;
+        min-width: 350px;
+        height: 50px;
         border-radius: 10px;
+        padding-left: 15px;
     }
 
     &__submit {
-        width: 320px;
-        height: 60px;
+        width: 250px;
+        height: 50px;
         border-radius: 10px;
         background-color: $colorAccentSite;
-        padding: 8px 0px;
+        padding: 8px;
 
         color: $colorSelectSite;
         font-family: $fontFamilySite;
-        font-size: 1.6rem;
+        font-size: 1.2rem;
         font-weight: 700;
         line-height: 137.99%;
         text-transform: uppercase;
