--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -1,7 +1,7 @@
 $colorSelectSite: #121217;
 $colorAccentSite: #DFB600;
 $colorFooter: #0F0F13;
-$colorBox: #17171D;
+$colorBox: #1c1c23;
 $colorText: #D9D9D9;
 $fontFamilySite: "Roboto";
 $widthSite: 1500px;
