--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   padding-bottom: 30px;
 }
 .catalog__box {
-  background-color: #17171D;
+  background-color: #1c1c23;
   display: flex;
   gap: 50px;
   padding: 50px;
@@ -60,7 +60,7 @@
   padding: 60px 0px;
 }
 .call-request__box {
-  background-color: #17171D;
+  background-color: #1c1c23;
   padding: 4% 8%;
   display: flex;
   justify-content: center;
@@ -339,7 +339,7 @@ body {
   padding-bottom: 40px;
 }
 .services__box {
-  background-color: #17171D;
+  background-color: #1c1c23;
   display: flex;
   flex-direction: column;
   padding: 35px;
