--- a/css/_call_reques.scss
+++ b/css/_call_reques.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 60px 0px;
+    padding: 40px 0px;
 
     &__box {
         background-color: $colorBox;
@@ -29,6 +29,11 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+
+    &__box {
+        display: flex;
+        flex-direction: column;
+    }
 
     &__info {
         color: $colorAccentSite;
