--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 60px 0px;
+  padding: 40px 0px;
 }
 .call-request__box {
   background-color: #1c1c23;
@@ -82,6 +82,10 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+}
+.questionnaire__box {
+  display: flex;
+  flex-direction: column;
 }
 .questionnaire__info {
   color: #DFB600;
