--- a/css/_call_reques.scss
+++ b/css/_call_reques.scss
@@ -8,14 +8,13 @@
         background-color: $colorBox;
         padding: 4% 8%;
         display: flex;
-        justify-content: center;
         flex-direction: column;
         align-items: center;
     }
 
     &__title {
-        padding: 0px 0px 15px 0px;
-        color: #D9D9D9;
+        padding-bottom: 15px;
+        color: $colorText;
         font-family: "Roboto";
         font-size: 2rem;
         font-style: normal;
@@ -48,6 +47,7 @@
         height: 50px;
         border-radius: 10px;
         padding-left: 15px;
+        background-color: $colorText;
     }
 
     &__submit {
