--- a/css/style.css
+++ b/css/style.css
@@ -63,12 +63,11 @@
   background-color: #1c1c23;
   padding: 4% 8%;
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
 .call-request__title {
-  padding: 0px 0px 15px 0px;
+  padding-bottom: 15px;
   color: #D9D9D9;
   font-family: "Roboto";
   font-size: 2rem;
@@ -99,6 +98,7 @@
   height: 50px;
   border-radius: 10px;
   padding-left: 15px;
+  background-color: #D9D9D9;
 }
 .questionnaire__submit {
   width: 250px;
