--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,23 @@
   color: #DFB600;
 }
 
+@keyframes slide-in-right {
+  0% {
+    transform: translateX(1000px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+.header__reques-btn {
+  width: 300px;
+  display: flex;
+  justify-content: flex-end;
+  animation: slide-in-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
 .call-request {
   display: flex;
   flex-direction: column;
@@ -99,6 +116,10 @@
   border-radius: 10px;
   padding-left: 15px;
   background-color: #D9D9D9;
+  border: transparent;
+}
+.questionnaire__input:focus {
+  outline: solid #DFB600;
 }
 .questionnaire__submit {
   width: 250px;
