--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,17 @@
 @import 'services';
 @import 'call_reques';
 
+@keyframes slide-in-right {
+    0% {
+      transform: translateX(1000px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
 html {
     font-size: 20px;
 }
@@ -71,6 +82,13 @@ body {
         &:hover {
             color: $colorAccentSite;
         }
+    }
+
+    &__reques-btn{
+        width: 300px;
+        display: flex;
+        justify-content: flex-end;
+        animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
 
     &__btn {
