update css, test mask

--- a/css/_call_reques.scss
+++ b/css/_call_reques.scss
@@ -50,6 +50,7 @@
         padding-left: 15px;
         background-color: $colorText;
         border: transparent;
+        outline: transparent;
 
         &:focus{
             outline: solid $colorAccentSite;
