--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@
   padding-left: 15px;
   background-color: #D9D9D9;
   border: transparent;
+  outline: transparent;
 }
 .questionnaire__input:focus {
   outline: solid #DFB600;
@@ -203,7 +204,7 @@ body {
 .header__link:hover {
   color: #DFB600;
 }
-.header__reques-btn {
+.header__call-reques-btn {
   width: 300px;
   display: flex;
   justify-content: flex-end;
@@ -438,8 +439,9 @@ body {
   gap: 30px;
 }
 
-@media (max-width: 375px) {
+@media (min-width: 320px) and (max-width: 425px) {
   .portfolio__box {
+    flex-direction: column;
     gap: 20px;
   }
 }/*# sourceMappingURL=style.css.map */
