--- a/css/style.scss
+++ b/css/style.scss
@@ -74,7 +74,7 @@ body {
         }
     }
 
-    &__call-reques-btn{
+    &__call-reques-btn {
         width: 300px;
         display: flex;
         justify-content: flex-end;
@@ -259,6 +259,11 @@ body {
         display: flex;
         flex-direction: column;
         padding: 35px;
+
+        &:hover {
+            box-shadow: 0px 2px 20px 0px $colorAccentSite;
+        }
+
     }
 
     &__box-info {
