update positions sections application and about, on the call request page, the footer position

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -1,4 +1,13 @@
 @media (min-width:320px) and (max-width: 425px) {
+    html {
+        font-size: 5px;
+    }
+
+    .team__flex {
+        display: flex;
+        gap: 15px;
+        flex-direction: column;
+    }
 
     .portfolio {
         &__box {
