--- a/css/_call_reques.scss
+++ b/css/_call_reques.scss
@@ -1,8 +1,10 @@
-
 .call-request {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    flex-grow: 1;
+
     padding: 40px 0px;
 
     &__box {
@@ -22,6 +24,7 @@
         font-weight: 400;
         line-height: normal;
     }
+
 }
 
 .questionnaire {
@@ -52,8 +55,9 @@
         border: transparent;
         outline: transparent;
 
-        &:focus{
+        &:focus {
             outline: solid $colorAccentSite;
+            background-color: $colorText;
         }
     }
 
