--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-grow: 1;
   padding: 40px 0px;
 }
 .call-request__box {
@@ -104,6 +105,7 @@
 }
 .questionnaire__input:focus {
   outline: solid #DFB600;
+  background-color: #D9D9D9;
 }
 .questionnaire__submit {
   width: 250px;
@@ -157,6 +159,9 @@ img {
 body {
   font-family: "Roboto", sans-serif;
   background-color: #121217;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .center {
@@ -176,8 +181,7 @@ body {
 }
 
 .baner {
-  min-width: 38vw;
-  max-height: 60vw;
+  min-width: 100%;
 }
 
 /*Header*/
@@ -223,9 +227,10 @@ body {
 
 /*Application*/
 .application {
-  display: flex;
   align-items: center;
-  justify-content: space-between;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(2, 1fr);
   gap: 40px;
 }
 .application__left {
@@ -272,9 +277,9 @@ body {
   align-items: center;
 }
 .about__box {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(2, 1fr);
   gap: 40px;
 }
 .about__desc {
@@ -360,7 +365,7 @@ body {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(3, 350px);
-  gap: 20px;
+  gap: 50px;
   padding-bottom: 40px;
 }
 .services__box {
@@ -410,6 +415,7 @@ body {
   justify-content: space-around;
   min-height: 230px;
   padding-top: 29px;
+  flex-shrink: 0;
 }
 .footer__text {
   color: #D9D9D9;
@@ -443,6 +449,14 @@ body {
 }
 
 @media (min-width: 320px) and (max-width: 425px) {
+  html {
+    font-size: 5px;
+  }
+  .team__flex {
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
+  }
   .portfolio__box {
     flex-direction: column;
     gap: 20px;
