--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -1,9 +1,20 @@
-@media (min-width:320px) and (max-width: 425px) {
+@media (max-width: 768px) {
 
     html {
-        font-size: 5px;
+        font-size: 14px;
     }
 
+    .center {
+        padding-left:2%;
+        padding-right: 2%;
+    }
+
+    .title{
+        padding-top: 30px;
+        padding-bottom: 25px
+    }
+
+    // Main Page
     .application {
         grid-template-columns: repeat(1, 1fr);
 
@@ -11,9 +22,8 @@
             grid-row-start: 1;
         }
 
-        &__left {
-            flex-direction: row;
-            justify-content: space-around;
+        &__btn{
+            padding: 12px 50px;
         }
     }
 
@@ -24,7 +34,6 @@
 
         &__box-left {
             display: none;
-
         }
 
         &__box-right {
@@ -32,17 +41,87 @@
         }
     }
 
-    .team__flex {
-        display: flex;
-        gap: 15px;
-        flex-direction: column;
-    }
+    .team{
 
-    .portfolio {
-        &__box {
-            // flex-direction: column;
-            // align-items: center;
-            gap: 20px;
+        &__box{
+            gap: 10px;
+            max-width: 40%;
+        }
+
+        &__flex {
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap;
+            justify-content: center;
+            flex-direction: row;
         }
     }
+    .portfolio {
+        &__box {
+            gap: 10px;
+        }
+
+        &__photo{
+            max-width: 45%;
+        }
+    }
+    
+    .services {
+        &__flex-box {
+            grid-template-columns: repeat(2, 350px);
+            gap: 10px;
+        }
+
+    }
+
+    .footer{
+
+    }
+
+    // Services Page
+
+    .catalog{
+        &__box{
+            flex-direction: column;
+            gap: 15px;
+            padding: 15px;
+        }
+        &__desc{
+            min-width: 100%;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+        &__photo{
+            padding-bottom: 0px;
+            max-width: 40%;
+        }
+        &__box-info{
+            gap: 30px;
+        }
+        &__text{
+            padding-bottom: 5px;
+        }
+    }
+
+    // coll reques Page
+}
+
+@media (max-width: 425px) {
+    
+    html {
+        font-size: 10px;
+    }
+    .services {
+    &__flex-box {
+        grid-template-columns: repeat(1, 250px);
+    }
+    &__photo{
+        padding-bottom: 10px
+    }
+    &__box-info{
+        align-items: center;
+        flex-direction: column;
+        gap: 5px;
+    }
+}
 }
